<resources>
    <string name="app_name">AnuraMotors</string>
    <string name="quotation_nav_button">Quotation</string>
    <string name="appointment_nav_button">Appointment</string>
    <string name="vehicle_nav_button">Add Vehicle</string>
    <string name="register_nav_button">Register</string>
    <string name="appoinment_header">Appointment Details</string>
    <string name="vehicle_txt_view">Vehicle</string>
    <string name="job_txt_view">Job</string>
    <string name="date_txt_view">Date</string>
    <string name="update_btn">Update</string>
    <string name="delete_btn">Delete</string>
    <string name="back_btn">Back</string>
    <string name="details">Vehicle Details</string>
    <string name="type">Type</string>
    <string name="VNo">VehicleNumber</string>
    <string name="color">Color</string>
    <string name="otherdetails">OtherDetails</string>
    <string name="model">Model</string>
    <string name="new_appoinment_header">Add New Appointment</string>
    <string name="add_btn">Add</string>
    <string name="appointment_header">Appointments</string>
    <string name="add_apointment_btn">Add Apointment</string>
    <string name="checkedtextview">CheckedTextView</string>
    <string name="addvehicle">Add New Vehicle</string>
    <string name="yourvehicle">Your Vehicles</string>
    <string name="appointment_1">Honda civic
    Full Service
    05/02/2020</string>
    <string name="vehicle_name_appoint1">Honda civic</string>
    <string name="job_name_appoint1">Full Service</string>
    <string name="date_appoint1">05/02/2020</string>
    <string name="FACEBOOK_APP_ID">632323767500430</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">https://anuramotors-1c24e.firebaseapp.com/__/auth/handler</string>
    <string name="address_bullet">\u2022 Address:</string>
    <string name="time_bullet">\u2022 Time:</string>
    <string name="stylelist_bullet">\u2022 StyleList:</string>
    <string name="bullet">\u2022</string>
    <string name="editbtn">Edit</string>
    <string name="prompt_password">Password</string>

    <string name="action_register">Sign Up</string>

    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">"Welcome!"</string>

    <string name="invalid_username">Not a valid username</string>

    <string name="invalid_password">Password must be >5 characters</string>

    <string name="login_failed">"Login failed"</string>

    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Viraj</string>

    <string name="nav_header_subtitle">it18145526@my.sliit.lk</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_Mark">Marks</string>

    <string name="menu_markingSchema">Marking Schema</string>

    <string name="menu_assignment">Assignments</string>

    <string name="menu_aboutgpa">GPA Schema</string>

    <string name="menu_req">Degree Requirements</string>

    <string name="registation">Registration</string>

    <string name="registaionNumber">Registration Number</string>

    <string name="ConfirmPassword">Confirm Password</string>

    <string name="email">E-mail</string>

    <string name="role">Role</string>

    <string name="semester">Semester</string>

    <string name="sem1">Semester 1</string>

    <string name="sem2">Semester 2</string>

    <string name="cgpa">Current CGPA</string>

    <string name="profilePicture">Profile Picture</string>

    <string name="userProfile">User Profile</string>

    <string name="regNoShort">Reg Number</string>

    <string name="gpa">GPA</string>

    <string name="update">Update</string>

    <string name="title_activity_main_ui">Home</string>

    <string name="signout">Sign out</string>

    <string name="past_papers">Past Papers</string>

    <string name="papers">Papers</string>

    <string name="PastPapers">Past Papers</string>

    <string name="past_paper_year">Paper Year</string>

    <string name="year_of_the_paper">Year of the paper</string>

    <string name="checkSem2">2nd</string>

    <string name="papersAndAnswers">Papers and Answers</string>

    <string name="spm2019">SPM2019</string>

    <string name="spm2018">SPM2018</string>

    <string name="reset">Reset</string>

    <string name="addcamarks">Add CA Marks</string>

    <string name="subject">Subject</string>

    <string name="midmark">Mid Mark</string>

    <string name="assignments">Assignments</string>

    <string name="submit">Submit</string>

    <string name="studentname">Student Name</string>

    <string name="camarks">CA Marks</string>

    <string name="add">Add</string>

    <string name="editPapers">Edit Papers</string>

    <string name="module_name">Module Name</string>

    <string name="search">Search</string>

    <string name="delete">Delete</string>

    <string name="report">Report</string>


    -<string name="AcceptRules">

-<![CDATA[Accept , Uni Thalluwa Rules & Regulations]]>
</string>

    <string name="app_info">App Info</string>

    <string name="edit">Edit</string>

    <string name="cancel">Cancel</string>

    <string name="select_module">Select module</string>

    <string name="selectModules">Select Modules</string>

    <string name="no_file_is_selected">No file is selected</string>

    <string name="change_password">Change Password</string>

    <string name="change">Change</string>

    <string name="old_pass">Old Password</string>

    <string name="new_password">New Password</string>

    <string name="deactivate">Deactivate</string>

    <string name="forgot_password">Forgot Password? Recover</string>

    <string name="application_desciption">This app devalped as the project of 1st year 2nd semester MAD (Mobile Application Development Project) Module</string>

    <string name="developer">Developer</string>


    -<string name="scorpion">

-<![CDATA[</Scorpion>]]>
</string>


    <string-array name="roleItems">
        <item>lux</item>

    <item>normal</item>

    <item>med</item>

</string-array>


    <string-array name="subjectList">

    <item>red</item>

    <item>black</item>

    <item>white</item>

    <item>blueP</item>

</string-array>


    <string-array name="semester">

    <item> select Brand</item>

    <item>Honda</item>
    <item>Bmw</item>
        <item>Suzuki</item>
        <item>Toyota</item>
        <item>Nissan</item>
        <item>Kia</item>
        <item>Audi</item>
        <item>Jeep</item>
</string-array>

    <string-array name="year">

    <item>Van</item>

    <item>Car</item>

    <item>Jeep</item>

        <item>Defender</item>

</string-array>


    <string-array name="module">

    <item> select colour</item>

    <item>Red</item>

    <item>Black</item>

    <item>White</item>

    <item>Blue</item>

        <item>Green</item>

        <item>Silver</item>
        <item>Brown</item>

    </string-array>

</resources>
